--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: textility
-Title: What the Package Does (one line, title case)
+Title: Utility functions for text mining
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Manuel", "Bickel", email = "manuel.bickel@posteo.de", role = c("aut", "cre"))
+Description: Collection of miscellaneous utility functions for text mining, 
+             covering, e.g., matrix type conversion, text processing, parallel pos tagging, or calculating topic coherence.
+			 Many functions wrap functionality of exisiting packages into customized functions for typical use cases
+			 or serve to speed up the functionality by parallelisation (e.g. for pos tagging).
 Depends: R (>= 3.4.3)
-License: What license is it under?
+License:  GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 Imports: data.table,
