--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,13 @@ export(bind_ngrams)
 export(calc_coherence)
 export(cos_sim2_vectors)
 export(get_cooccurrence)
+export(make_top_term_matrix)
 export(replace_acronyms_by_words)
+export(sparse_to_stm)
 export(split_columns)
 export(stri_process)
 export(subset_rows_DT)
 export(treetag_parallel)
 export(tripl_to_sparse)
 export(uncontract_negations)
+import(data.table)
