--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,11 @@ export(calc_coherence)
 export(cos_sim2_vectors)
 export(get_cooccurrence)
 export(make_top_term_matrix)
+export(patterns_in_topics)
 export(replace_acronyms_by_words)
+export(scale_normal)
+export(semantic_coherence_stm_light)
+export(sort_topicmodels_LDA_by_lambda)
 export(sparse_to_stm)
 export(split_columns)
 export(stri_process)
