update namespace, etc.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,15 @@
 
 export(attr_DT)
 export(bind_ngrams)
-export(calc_coherence)
 export(cos_sim2_vectors)
 export(get_cooccurrence)
 export(get_extrema)
 export(get_loglik_parallel)
-export(get_n_skip_gram_windows)
 export(get_rank)
+export(get_wiki_content)
 export(gradient_numeric)
 export(loess_aicc_optimized)
+export(p_lm)
 export(patterns_in_topics)
 export(replace_acronyms_by_words)
 export(scale_normal)
@@ -24,4 +24,5 @@ export(top_feature_matrix)
 export(treetag_parallel)
 export(tripl_to_sparse)
 export(uncontract_negations)
+export(warp_lda_vary_n_parallel)
 import(data.table)
